# SystemMonitorApp

./: .gitignore  LICENSE  Makefile  README.md  main.ui  pyproject.toml  requirements.txt  splash_screen.ui  systemMonitor.py
docs/: ARCHITECTURE.md  FEATURE_PROPOSALS.md  ROADMAP.md
src/system_monitor/: __init__.py  app.py  constants.py  models.py
src/system_monitor/services/: __init__.py  csv_exporter.py  history_buffer.py  system_stats.py
src/system_monitor/ui/: __init__.py  main_window.py  splash_screen.py
tests/: test_history_buffer.py  test_system_stats_service.py
